--- a/screens/style1.css
+++ b/screens/style1.css
@@ -1,8 +1,6 @@
 /* base style */
-
-.image {
-  position: relative; /* To help the image + text element to get along with the rest of the page*/
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
 .project-title {
@@ -18,28 +16,40 @@
 }
 
 .button-wrapper {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  padding-top: 20px;
 }
 
-#button-project a:nth-child(3) {
-  grid-row: 2;
+.wrap-first-two-buttons {
+  flex-direction: row;
 }
 
-.project1 {
+.project-page {
   padding: 0 20px;
 }
+.project-name {
+  grid-column: 1/4;
+  padding-bottom: 10px;
+  border-bottom: 3px solid var(--primary);
+  text-transform: uppercase;
+}
 
-@media screen and (max-width: 600px) {
-  .image img {
-    width: 100%;
-  }
-  .project-title {
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: 0;
+.image1 {
+  grid-column: 6/9;
+}
+.image2 {
+  grid-column: 1/4;
+}
+
+.welcome {
+  grid-column: 4/9;
+  text-align: right;
+}
+@media screen and (max-width: 960px) {
+  .image1 img,
+  .image2 img {
+    width: 50%;
   }
 }
