--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ li {
 }
 h1,
 h3 {
-  font-size: 1.2em;
+  font-size: 1.3em;
 }
 h2 {
   font-size: 1.6em;
@@ -91,21 +91,24 @@ h4 {
 }
 #welcome {
   padding: 0 20px 20px 20px;
+  align-items: center;
+  justify-content: center;
 }
 .welcome-text {
-  grid-column: 1/6;
+  grid-row: 2;
+  text-align: center;
 }
 .welcome-image {
-  grid-column: 6/9;
+  grid-row: 1
 }
 .welcome-image img {
-  width: 300%;
+  width: 100%;
 }
 .welcome-text a {
   margin: 20px 0;
 }
 #portfolio h3 {
-  margin-bottom: 0;
+  margin-bottom: 20;
   text-align: center;
 }
 
@@ -146,8 +149,6 @@ h4 {
 
 #contact {
   padding: 30px 20px;
-  background-image: url("assets/footer_image.jpg");
-  background-size: cover;
 }
 
 #contact h3,
@@ -204,9 +205,11 @@ footer img {
 @media screen and (min-width: 620px) {
   .welcome-text {
     grid-column: 1/4;
+    grid-row: 1
   }
   .welcome-image {
     grid-column: 5/9;
+    grid-row: 1
   }
   .welcome-image img {
     width: 100%;
@@ -332,3 +335,58 @@ footer img {
     width: 60px;
   }
 }
+
+/* animation */
+
+.wrapper {
+  padding-top: 100px;
+  width: 400px;
+  height: 300px;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+}
+
+.main-element {
+  position: absolute;
+  top: 1%;
+  left: 1%;
+  display: block;
+  height: 98%;
+  width: 98%;
+  margin: auto;
+  align-self: center;
+  background: #fff;
+  z-index: 1;
+}
+
+.border {
+  position: absolute;
+  display: block;
+  top: -50%;
+  left: -50%;
+  z-index: -9;
+  display: block;
+  height: 200%;
+  width: 200%;
+  transform: rotate(-45deg);
+  overflow: hidden;
+  background: linear-gradient(to right, #fff 20%, #fff 40%, #ECD08C 50%, #ECD08C 55%, #fff 70%, #fff 100%);
+  background-size: 200% auto;
+  
+  animation: shine 3s linear infinite;
+}
+
+.wrapper-contact {
+  width: 500px;
+  height: 400px;
+}
+
+
+/*Begin shimmer code*/
+
+@keyframes shine {
+    to {
+      background-position: 200% center;
+    }
+  }
